<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_home_advanced"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:verticalScrollbarPosition="right">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_home_advanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_home_advanced"
            style="@style/FontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:checked="true"
            android:text="@string/advanced"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/textView_home_advanced_all"
                style="@style/button_primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_extra_small"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/all" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/textView_home_advanced_bcr"
                style="@style/button_primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_extra_small"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bcr" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/textView_home_advanced_bt"
                style="@style/button_primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_extra_small"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bt" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_filter_home_advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/primary_dark"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:listitem="@layout/recyclerview_item_transactions_option" />

        <LinearLayout
            android:id="@+id/linearLayout_home_advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_filter_home_advanced">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_home_advanced_start_date_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_home_advanced_start_date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/enter_start_date"
                    android:textColorHint="@color/white"
                    android:textIsSelectable="true"
                    android:windowSoftInputMode="stateAlwaysHidden" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_home_advanced_end_date_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_home_advanced_end_date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/enter_end_date"
                    android:textColorHint="@color/white"
                    android:textIsSelectable="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:id="@+id/view_home_advanced_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_home_advanced" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart_home_advanced"
            android:layout_width="200dp"
            android:layout_height="240dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_home_advanced_1" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pieChart_home_advanced"
            app:layout_constraintTop_toBottomOf="@+id/view_home_advanced_1">

            <TextView
                android:id="@+id/text_view_home_advanced_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/total" />

            <TextView
                android:id="@+id/text_view_home_advanced_total_difference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="2000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/text_view_home_advanced_total_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/total_income" />

            <TextView
                android:id="@+id/text_view_home_advanced_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="2000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/text_view_home_advanced_total_expenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/total_expenses" />

            <TextView
                android:id="@+id/text_view_home_advanced_expenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="2000" />
        </LinearLayout>

        <View
            android:id="@+id/view_home_advanced_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="48dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pieChart_home_advanced" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:contentPaddingTop="@dimen/padding_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_home_advanced_2"
            app:shapeAppearanceOverlay="@style/MaterialCardview_home">

            <LinearLayout
                android:id="@+id/linear_layout_home_advanced_scroll_transactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--            <androidx.core.widget.NestedScrollView-->
                <!--                android:id="@+id/nested_scroll_view_home_advanced"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:fillViewport="true"-->
                <!--                android:verticalScrollbarPosition="right">-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_transactions_home_advanced"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_dark"
                    android:verticalScrollbarPosition="right"
                    tools:listitem="@layout/recyclerview_item_transaction" />
                <!--            </androidx.core.widget.NestedScrollView>-->

                <!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
                <!--                android:id="@+id/fab"  TODO -->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_gravity="bottom|end"-->
                <!--                android:layout_marginBottom="48dp"-->
                <!--                android:backgroundTint="@color/black"-->
                <!--                app:backgroundTint="@color/black"-->
                <!--                app:srcCompat="@android:drawable/ic_menu_add" />-->
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>