<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_home"
        style="@style/FontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:checked="false"
        android:text="@string/advanced"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_home_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="721.50 RON"
        android:textSize="@dimen/heading_h2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_home" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/margin_medium"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shapeAppearanceOverlay="@style/card_view_rounded_small_size_4_sides">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_home_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingEnd="@dimen/padding_medium"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/textView_home_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_home_income"
                    android:textSize="@dimen/font_small_text"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_home_income_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="1622.8 RON"
                    android:textSize="@dimen/heading_h6"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/textView_home_income" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/width_arrow_home"
                    android:layout_height="@dimen/height_arrow_home"
                    android:src="@drawable/ic_arrow_down"
                    app:layout_constraintEnd_toStartOf="@+id/textView_home_income"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            app:shapeAppearanceOverlay="@style/card_view_rounded_small_size_4_sides">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_home_expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:paddingEnd="@dimen/padding_medium">

                <TextView
                    android:id="@+id/textView_home_expenses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses"
                    android:textSize="@dimen/font_small_text"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_home_expenses_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="659.32 RON"
                    android:textSize="@dimen/heading_h6"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView_home_expenses" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/width_arrow_home"
                    android:layout_height="@dimen/height_arrow_home"
                    android:src="@drawable/ic_arrow_up"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/MaterialCardview_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/home_flexbox_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:justifyContent="space_evenly"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_home_all"
                    style="@style/button_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_all"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_home_income"
                    style="@style/button_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_income"
                    app:layout_constraintStart_toEndOf="@+id/button_home_all" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_home_expenses"
                    style="@style/button_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_expenses"
                    app:layout_constraintStart_toEndOf="@+id/button_home_income" />

            </com.google.android.flexbox.FlexboxLayout>

            <ScrollView
                android:id="@+id/scrollview_home"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_extra_small"
                android:fillViewport="true"
                android:verticalScrollbarPosition="right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_flexbox_layout">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/recyclerview_item_transaction" />
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/image_view_home_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>